syntax = "proto3";

option go_package = "common/rating";

package rating;

import "google/api/annotations.proto";

service RatingService{
  rpc RateAccommodation(RateAccommodationRequest) returns(RateAccommodationResponse) {
    option (google.api.http) = {
      post: "/api-1/rating/accommodation",
      body: "*"
    };
  }

  rpc GetRatingForAccommodation(RatingForAccommodationRequest) returns(RatingForAccommodationResponse) {
    option (google.api.http) = {
      get: "/api-1/rating/{accommodationId}"
    };
  }

  rpc GetRecommendedAccommodations(RecommendedAccommodationsRequest) returns(RecommendedAccommodationsResponse) {
    option (google.api.http) = {
      get: "/api-1/rating/recommended/{guestId}"
    };
  }

  rpc DeleteRatingForAccommodation(RatingForAccommodationRequest) returns(EmptyResponse) {
    option (google.api.http) = {
      delete: "/api-1/rating/{accommodationId}"
    };
  }
}

message EmptyResponse {}

//RecommendedAccommodations
message RecommendedAccommodationsRequest {
  string guestId = 1;
}

message RecommendedAccommodationsResponse {
  repeated string accommodationId = 1;
}

//RatingForAccommodation
message RatingForAccommodationRequest {
  string accommodationId = 1;
}

message RatingForAccommodationResponse {
    AccommodationRating rating = 1;
}

//RateAccommodation
message RateAccommodationRequest {
  RateAccommodation rating = 1;
}

message RateAccommodationResponse {}

message AccommodationRating {
  float avgRating = 1;
  string accommodationId = 2;
  repeated Rating ratings = 3;
}

message Rating {
  string guestId = 1;
  string Date = 2;
  int32 rating = 3;
}

message RateAccommodation {
  int32 rating = 1;
  string accommodationId = 2;
}



